--- a/html/ks-v1.html
+++ b/html/ks-v1.html
@@ -20,8 +20,12 @@
 </div>
 <!-- nav-right -->
 <main>
-    chaitanyacha
-
+    chaitanyacha <br>
+  <div class="chaitu">
+       
+       vyshnav made changes
+  </div>
+ 
   <nav>
     <div class="nav-right hidden-xs">
       <div class="button" id="btn">
@@ -37,13 +41,17 @@
     <i class="fa fa-user"></i>
   </a>
 </main>
-<h1>sumanth made a change here   </h1>
+<div class="sum">
+<h1 class="sumanth">sumanth made a change here   </h1>
+
+</div>
 <div class="sidebar">
   <ul class="sidebar-list">
     <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 1</a></li>
     <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 2</a></li>
     <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 3</a></li>
     <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 4</a></li>
+    <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 5</a></li>
   </ul>
 </div>
 </body>
