--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="us">
 <head>
 	<meta charset="utf-8">
-	<title>jQuery UI Example Page</title>
+	<title>jQuery UI Exampl Page</title>
 	<link href="../css/jquery-ui.css" rel="stylesheet">
 
 	
